<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/home_bg"
    android:padding="24dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/credits"
        android:textSize="20sp"
        android:textColor="@color/dialog_txt"
        android:fontFamily="@font/nunito_semibold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/designed_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/designed_by"
        android:textColor="@color/dialog_txt"
        android:fontFamily="@font/nunito_regular"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/designer_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/divya"
        android:textSize="16sp"
        android:textColor="@color/dialog_txt"
        android:fontFamily="@font/nunito_regular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/designed_by" />

    <TextView
        android:id="@+id/developed_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/developed_by"
        android:textColor="@color/dialog_txt"
        android:fontFamily="@font/nunito_regular"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/designer_name" />

    <TextView
        android:id="@+id/developer_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hnc"
        android:textColor="@color/dialog_txt"
        android:fontFamily="@font/nunito_regular"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/developed_by" />

    <TextView
        android:id="@+id/font"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/font"
        android:textColor="@color/dialog_txt"
        android:fontFamily="@font/nunito_regular"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/developer_name" />

    <TextView
        android:id="@+id/text_font_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nunito"
        android:textColor="@color/dialog_txt"
        android:fontFamily="@font/nunito_regular"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/font"
        android:layout_marginBottom="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>